tests/snapshots/examples_fixtures/type_system__failing__82_match_list_missing_empty.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/82_match_list_missing_empty.flx
== compile ==
failed (compile)
== diagnostics ==
Error[E015]: Non-Exhaustive Match

Match is non-exhaustive: missing list case(s): [].

  examples/type_system/failing/82_match_list_missing_empty.flx:4:1
  |
4 | match xs {
  | ^^^^^^^^^^
5 |     [h | t] -> h
  | ^^^^^^^^^^^^^^^^
6 | };
  | ^

Hint:
  Add missing list arms or an unguarded `_ -> ...` catch-all.
== stdout ==
<not executed>
