tests/snapshots/examples_fixtures/type_system__failing__85_hm_function_effect_mismatch.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/85_hm_function_effect_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Argument Type Mismatch

I found the wrong type in the 1st argument to `apply_with_time`.

  examples/type_system/failing/85_hm_function_effect_mismatch.flx:40:21
   |
35 | fn apply_with_time(f: ((Int) -> Int with Time), x: Int) -> Int {
   | -------------------------------------------------------------- `apply_with_time` expects `(Int) -> Int with Clock` as the 1st parameter
36 |     f(x)
37 | }
38 | 
39 | fn main() -> Unit {
40 |     apply_with_time(io_add_one, 1)
   |                     ^^^^^^^^^^
   |                     ---------- this argument has type `(Int) -> Int with Console, FileSystem, Stdin, Env, Process`

Note:
  expected argument type: (Int) -> Int with Clock
  found argument type: (Int) -> Int with Console, FileSystem, Stdin, Env, Process
  the actual argument type is inferred from this expression
  the expected argument type comes from the function signature

Help:
  Pass a `(Int) -> Int with Clock` value as the 1st argument.
== stdout ==
<not executed>
