tests/snapshots/examples_fixtures/type_system__failing__87_hm_pattern_binding_constrained_mismatch.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/87_hm_pattern_binding_constrained_mismatch.flx
== compile ==
failed (compile)
== diagnostics ==
error[E300]: Annotation Type Mismatch

The value of `x` does not match its type annotation.

  examples/type_system/failing/87_hm_pattern_binding_constrained_mismatch.flx:86:21
   |
86 |     let x: String = match Some(1) {
   |                     ^^^^^^^^^^^^^^^
   |            ------ but `x` was annotated as `String`
87 |         Some(v) -> v,
   | ^^^^^^^^^^^^^^^^^^^^^
88 |         None -> 0,
   | ^^^^^^^^^^^^^^^^^^
89 |     }
   | ^^^^^

Note:
  annotated type: String
  value type: Int

Help:
  Try `to_string(...)` to convert a `Int` into a `String`.


error[E300]: Match Arm Type Mismatch

The arms of this `match` expression do not agree on a type.

  examples/type_system/failing/87_hm_pattern_binding_constrained_mismatch.flx:87:20
   |
87 |         Some(v) -> v,
   |                    ^
   |                    - arm 1 has type `Int`

   |                    - first arm returns `String`

   |                    - this arm established the expected type

   |                    - arm 1 conflicts with that type

Note:
  first arm type: String
  this arm type: Int
  the first arm fixes the type expected from the whole `match`
  this arm produces the competing type

Help:
  Try `to_string(...)` to convert a `Int` into a `String`.


error[E300]: Return Type Mismatch

The body of `main` does not match its declared return type.

  examples/type_system/failing/87_hm_pattern_binding_constrained_mismatch.flx:90:5
   |
85 | fn main() -> Unit {
   |              ---- `main` was declared to return `Unit`
86 |     let x: String = match Some(1) {
87 |         Some(v) -> v,
88 |         None -> 0,
89 |     }
90 |     x
   |     ^
   |     - this expression has type `String`
   |
help: Change return type to `String`
   |
85 | fn main() -> String {
   |              ~~~~~~

Note:
  declared return type: Unit
  body type: String

Help:
  Return a `Unit` value from `main` or change its annotation.

Found 3 errors.
== stdout ==
<not executed>
