tests/snapshots/examples_fixtures/type_system__failing__89_adt_generic_constructor_hm_mismatch.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/type_system/failing/89_adt_generic_constructor_hm_mismatch.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
